--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -322,6 +322,9 @@ ul li {
 .divider {
     color: #83cafb !important;
 }
+#usersessionsession .divider {
+    margin: 0 20px;
+}
 #donationWrapper {
     float: right;
 }
