--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1653,6 +1653,9 @@ h3 {
 .pipe{
     margin: 0 20px;
 }
+.usersessionsession .pipe{
+    color: #FFF; 
+}
 #video-control {
     margin: 31px auto 0px;
     width: 940px;
