--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3080,6 +3080,7 @@ ul.quicktabs-tabs.quicktabs-style-zen {
     border-bottom: 0 solid #CCCCCC!important;
     height: auto!important;
     margin-bottom: 50px;
+    width: auto!important; 
 }
 .page-search #mainContentWrapper{
   width: 940px!important;
