--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -69,7 +69,9 @@ strong {
 ul li {
     list-style: none outside none;
 }
-
+*:focus {
+    outline: 0;
+}
 /* ==============================================================
    ================= HEADER =====================================
    ============================================================== */
