--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2234,7 +2234,7 @@ span.lessonsCourse {
 //     text-transform: capitalize;
 // }
 .transcription .form-type-select{
-    margin-bottom: 9px!important;
+    //margin-bottom: 9px!important;
 }
 #transcriptWrapper label{
     float: left;
