--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3994,7 +3994,7 @@ background: url("../images/wrapper_player_bg.jpg") repeat-x !important;
     margin-top: 13px;
 }
 .form-item.form-type-select {
-    margin: auto auto 15px;
+    margin: auto;
     float: left;
     
 }
