--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3912,7 +3912,8 @@ background: url("../images/wrapper_player_bg.jpg") repeat-x !important;
 //     display: inline-block;
 //     margin-bottom: 20px;
 // }
-.transcript-content.free-scroll {
+//.transcript-content.free-scroll 
+.openTranscript{
     margin-bottom: 80px !important;
     margin-top: 40px !important;
     top: 40px;  
