--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3912,11 +3912,10 @@ background: url("../images/wrapper_player_bg.jpg") repeat-x !important;
 //     display: inline-block;
 //     margin-bottom: 20px;
 // }
-//.transcript-content.free-scroll 
-.openTranscript{
-    margin-bottom: 80px !important;
+.transcript-content.free-scroll {
+    margin-bottom: 40px !important;
     margin-top: 40px !important;
-    top: 40px;  
+    //top: 40px;  
 }
 .view-filters.searchThisCourse,
 .lessonCollectionSection .view-filters,
