--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1867,6 +1867,9 @@ h3 {
     margin-top: 9px;
     text-align: center;
 }
+.priceLogin.logColor a {
+    color: #0877ca!important; 
+}
 #wrapperInfoCour > span {
     display: block;
     color: #bababa;
