--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -4143,3 +4143,7 @@ body.node-type-live-events #courseDescription #eSocial,
 body.node-type-live-events .courseDescriptionWrapper {
   clear: both;
 }
+.lessonDetailsInfo a.coursTitleBold{
+  font-size: 15px !important;
+  font-weight: bold;
+}
