--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -4147,3 +4147,6 @@ body.node-type-live-events .courseDescriptionWrapper {
   font-size: 15px !important;
   font-weight: bold;
 }
+#wrappperRightBloc .wrapperDescription .highlightsWrapper ul li{
+  list-style: outside none disc;
+}
