made div clickable

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3587,6 +3587,7 @@ body.node-type-course .messages.error {
 
 .wrapperLesson {
     border-bottom: 1px solid #e5e5e5;
+    cursor: pointer;
     float: left;
     padding: 12px 0 12px 12px;
     width: 415px;
