--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3847,10 +3847,10 @@ background: url("../images/wrapper_player_bg.jpg") repeat-x !important;
     width: 940px;
     // float: left;
 }
-.transcript-content.free-scroll {
-    margin: auto;
-    width: 940px;
-}
+// .transcript-content.free-scroll {
+//     margin: auto;
+//     width: 940px;
+// }
 .transcription {
     //background: url("../images/transcription-bg.png") repeat-x scroll center top #fff;
     border-bottom: 1px solid #e2e2e2;
@@ -3860,9 +3860,9 @@ background: url("../images/wrapper_player_bg.jpg") repeat-x !important;
 //    margin-top: 20px;
 //    margin-bottom: 20px;  
 // }
-.transcript-content.free-scroll{
-  margin-bottom: 0!important; 
-}
+// .transcript-content.free-scroll{
+//   margin-bottom: 0!important; 
+// }
 .transcription span.lessonsCourse {
   
     background: url("/sites/all/themes/ukabbalah/images/white_arrow.png") no-repeat scroll 200px 17px #007ace !important;
@@ -3917,11 +3917,11 @@ background: url("../images/wrapper_player_bg.jpg") repeat-x !important;
 //     display: inline-block;
 //     margin-bottom: 20px;
 // }
-.transcript-content.free-scroll {
-    margin-bottom: 40px !important;
-    margin-top: 40px !important;
-    //top: 40px;  
-}
+// .transcript-content.free-scroll {
+//     margin-bottom: 40px !important;
+//     margin-top: 40px !important;
+//     //top: 40px;  
+// }
 .view-filters.searchThisCourse,
 .lessonCollectionSection .view-filters,
 #block-views-lesson-collection-block .view-filters,
