--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3988,17 +3988,14 @@ background: url("../images/wrapper_player_bg.jpg") repeat-x !important;
 }
 .textTranscription {
     color: #818181;
-    display: inline;
-    // float: left;
+    float: left;
     font-size: 15px;
     margin-left: 40px;
     margin-top: 15px;
 }
 .form-item.form-type-select {
-    clear: both;
-    display: inline-block;
-    // float: left;
     margin: auto;
+    float: left;
     
 }
 .trans-lang-select.form-select {
