--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -4142,3 +4142,6 @@ body.node-type-live-events .courseDescriptionWrapper {
 #wrappperRightBloc .wrapperDescription .highlightsWrapper ul li{
   list-style: outside none disc;
 }
+.coursLabelBold{
+  font-weight: bold;
+}
