--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -4143,5 +4143,5 @@ body.node-type-live-events .courseDescriptionWrapper {
   list-style: outside none disc;
 }
 .coursLabelBold{
-  font-weight: bold;
+  font-weight: bold !important;
 }
