--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3999,6 +3999,7 @@ background: url("../images/wrapper_player_bg.jpg") repeat-x !important;
     
 }
 .trans-lang-select.form-select {
+    border: none;
     cursor: pointer;
     height: 45px;
     width: 100%;
