--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -4115,7 +4115,7 @@ body.node-type-live-events .courseDescriptionWrapper {
   font-weight: bold;
 }
 #wrappperRightBloc .wrapperDescription .highlightsWrapper ul li{
-  list-style: outside none disc;
+  list-style: outside disc;
 }
 .coursLabelBold{
   font-weight: bold !important;
